add Heading and Subheading component

--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -62,7 +62,7 @@
 }
 
 .nav-right {
-    flex: 2;
+    flex: 3;
     display: flex;
     align-items: center;
     padding: 0 50px;
@@ -71,26 +71,34 @@
 }
 
 .nav-sign {
-    flex: 1;
+    flex: 20;
     font-size: 16px;
     padding: 22px 5px;
     cursor: pointer;
 }
 
+.theme {
+    flex: 2;
+}
+
 .nav-theme-toggle {
-    height: 15px;
-    width: 30px;
+    height: 20px;
+    width: 45px;
     background-color: gray;
     border: 2px solid black;
     border-radius: 30px;
     position: relative;
-    margin-left: 15px;
+    /* margin: 0 0 0 15px; */
+    margin: 0 50%;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .nav-theme-circle {
-    height: 15px;
-    width: 15px;
+    height: 20px;
+    width: 20px;
     background-color: white;
     border: 2px solid black;
     border-radius: 30px;
