--- a/frontend/src/components/Bookcategories/Bookcategory.css
+++ b/frontend/src/components/Bookcategories/Bookcategory.css
@@ -1,30 +1,23 @@
-.topbook {
+.bookcategory {
     flex: 1;
-    margin: 0 40px;
+    margin: 30px;
     min-width: 240px;
-    height: 440px;
+    height: 360px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
 }
 
-.topbook-img {
+.bookcategory-img {
     height: 240px;
     margin: 10px;
     vertical-align: middle;    
 }
 
-.topbook-title {
+.bookcategory-title {
     font-weight: 500;
-    margin: 10px;
+    margin: 10px 0 0 0;
     text-align: center;
-}
-
-.topbook-desc {
-    margin: 0 10px;
-    text-align: justify;
-    overflow: hidden;
-    font-size: 0.9rem;
-    color: rgb(108, 107, 107);
+    width: 80%;
 }
