--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -3,8 +3,10 @@
 }
 
 .copyright {
-    height: 50px;
-    padding-top: 35px;
+    /* height: 50px; */
+    padding: 20px;
+    margin-top: 10px;
     text-align: center;
     color: #8f8f8f;
+    background-color: #fcf5f5;
 }
