--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -3,9 +3,9 @@
 }
 
 .copyright {
-    /* height: 50px; */
+    height: 25px;
     padding: 20px;
-    margin-top: 10px;
+    margin-top: 20px;
     text-align: center;
     color: #8f8f8f;
     background-color: #fcf5f5;
