--- a/frontend/src/components/Bookcategories/Bookcategory.css
+++ b/frontend/src/components/Bookcategories/Bookcategory.css
@@ -1,14 +1,21 @@
 .bookcategory {
     flex: 1;
-    margin: 30px;
+    margin: 20px;
     min-width: 240px;
     height: 360px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
+    box-shadow: 0px 0px 3px #7d7d7d;
+    cursor: pointer;
+    transition: all 0.5s ease;
 }
 
+.bookcategory:hover {
+    transform: scale(1.1);
+    opacity: 0.8;
+}
 .bookcategory-img {
     height: 240px;
     margin: 10px;
