--- a/frontend/src/components/Features/Features.css
+++ b/frontend/src/components/Features/Features.css
@@ -1,5 +1,7 @@
 .features {
     margin: 0;
+    /* border: 0.1px solid black; */
+    background-color: #fcf5f5;
 }
 
 .features-wrapper {
@@ -16,8 +18,10 @@
 .feature-card {
     flex: 1;
     padding: 30px;
+    /* padding-top: 0; */
     margin: 0 50px;
     text-align: center;
+    /* border: 0.1px solid black; */
 }
 
 .feature-icon {
