--- a/frontend/src/components/Heading/Heading.css
+++ b/frontend/src/components/Heading/Heading.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 50px 0 30px 0;
+    padding: 50px 0 30px 0;
 }
 
 .left-line, .right-line {
