--- a/frontend/src/components/Slider/Slider.css
+++ b/frontend/src/components/Slider/Slider.css
@@ -1,15 +1,22 @@
+* {
+    /* border: 0.1px solid black; */
+}
+
 .slider {
-    width: 100%;
-    height: 100vh;
+    width: 99%;
+    height: 95vh;
     display: flex;
     position: relative;
+    margin: 0 auto;
     overflow: hidden;
+    /* box-shadow: 2px 2px 5px #7d7d7d; */
+    border: 0.1px solid rgb(153, 153, 153);
+    margin-bottom: 100px;
 }
 
 .slider-arrow-left, .slider-arrow-right {
     width: 50px;
     height: 50px;
-    background-color: #fff7f7;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -19,16 +26,18 @@
     bottom: 0;
     margin: auto;
     cursor: pointer;
-    opacity: 0.5;
+    opacity: 0.7;
     z-index: 2;
 }
 
 .slider-arrow-left {
     left: 10px;
+    transform: scale(1.3);
 }
 
 .slider-arrow-right {
     right: 10px;
+    transform: scale(1.3);
 }
 
 .slider-wrapper {
@@ -47,7 +56,7 @@
 
 .slide-img-container {
     height: 100%;
-    flex: 7;
+    flex: 5;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -59,12 +68,13 @@
 
 .slide-info-container {
     flex: 8;
-    padding: 40px;
-    margin: 36px;
+    padding: 20px;
+    margin: 20px;
+    margin-right: 60px;
 }
 
 .slide-title {
-    font-size: 60px;
+    font-size: 42px;
     margin: 30px 0;
 }
 .slide-author {
@@ -75,9 +85,32 @@
 
 .slide-desc {
     margin: 10px 0px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     letter-spacing: 1.5px;
     color: #363636;
     text-align: justify;
+}
+
+.slide-button-container {
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+    margin-top: 40px;
+    gap: 50px;
+}
+
+.slide-button {
+    height: 50px;
+    width: 200px;
+    font-size: 20px;
+    background-color: #363636;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all .5s ease;
+}
+
+.slide-button:hover {
+    box-shadow: 2px 2px 10px #3f3f3f;
 }
