--- a/frontend/src/components/Topbooks/Topbook.css
+++ b/frontend/src/components/Topbooks/Topbook.css
@@ -7,6 +7,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    box-shadow: 0px 0px 5px #7d7d7d;
+    padding: 10px;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+
+.topbook:hover {
+    transform: scale(1.1);
 }
 
 .topbook-img {
