--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,24 @@
 * {
     margin: 0;
     font-family: "Ubuntu", sans-serif;
-    /* border: 0.1px solid black; */
+    scroll-behavior: smooth;
+}
+
+a {
+    text-decoration: none;
+    color: unset;
+}
+
+body::-webkit-scrollbar {
+    width: 5px;
+}
+
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: black;
+    outline: 2px solid black;
+    border-radius: 5px;
 }
